<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/action_calculator"
            android:enabled="true"
            android:icon="@drawable/ic_monetization_on_black_24dp"
            android:title="@string/navigation_item_calculator"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/action_exchange_rates"
            android:enabled="true"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/navigation_item_list"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/action_graph"
            android:enabled="true"
            android:icon="@drawable/ic_graphic_eq_black_24dp"
            android:title="@string/navigation_item_graph"
            app:showAsAction="ifRoom" />
</menu>