<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.example.neven.exchangeratesapp.fragments.CalculatorFragment">


    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@color/myCyan"
            android:id="@+id/rlFirst">

        <TextView
                android:text="@string/fragment_calculator_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textStyle="normal|bold"
                android:textSize="@dimen/dimen_30sp"
                android:textColor="@android:color/white"
                android:id="@+id/tvHeader"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/myCyan"
            android:id="@+id/rlLast">

        <Button
                android:text="@string/fragment_calculator_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button_rounded"
                android:id="@+id/bCalculate"
        />
    </RelativeLayout>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:layout_below="@+id/rlFirst"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:hint="@string/fragment_calculator_value_hint"
            android:id="@+id/etValue"/>

    <ImageView
            android:layout_width="@dimen/dimen_50dp"
            android:layout_height="@dimen/dimen_50dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="@dimen/dimen_5dp"
            android:layout_marginStart="@dimen/dimen_5dp"
            android:id="@+id/ivFromCurrency"/>
    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tvFromCurrency"
            android:layout_toEndOf="@+id/tvFromCurrency"
            android:id="@+id/sFromCurrency"/>
    <TextView
            android:text="@string/fragment_calculator_convertTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:id="@+id/textView11"/>
    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/sToCurrency"/>
    <TextView
            android:text="@string/fragment_calculator_default_to_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/sToCurrency"
            android:layout_toStartOf="@+id/sToCurrency"
            android:visibility="gone"
            android:id="@+id/tvToCurrency"/>
    <ImageView
            android:layout_width="@dimen/dimen_50dp"
            android:layout_height="@dimen/dimen_50dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/tvToCurrency"
            android:layout_toStartOf="@+id/tvToCurrency"
            android:id="@+id/ivToCurrency"
    />
    <TextView
            android:text="@string/fragment_calculator_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/rlLast"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:id="@+id/tvResult"/>
    <TextView
            android:text="@string/fragment_calculator_default_from_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView11"
            android:layout_alignBottom="@+id/textView11"
            android:layout_toRightOf="@+id/ivFromCurrency"
            android:layout_toEndOf="@+id/ivFromCurrency"
            android:visibility="gone"
            android:id="@+id/tvFromCurrency"/>


</RelativeLayout>
