<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
>

    <ImageView
            android:layout_width="@dimen/dimen_50dp"
            android:layout_height="@dimen/dimen_50dp"
            app:srcCompat="@mipmap/ic_launcher"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:visibility="invisible"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:layout_marginBottom="@dimen/dimen_5dp"
            android:id="@+id/ivLogo"/>
    <TextView
            android:text="@string/fragment_exchangerate_currency_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/ivLogo"
            android:layout_toEndOf="@+id/ivLogo"
            android:layout_margin="@dimen/dimen_6dp"
            android:textStyle="normal|bold"
            android:id="@+id/tvCurrencyName" android:gravity="center"/>
    <TextView
            android:text="@string/fragment_exchangerate_selling_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tvCurrencyName"
            android:layout_toEndOf="@+id/tvCurrencyName"
            android:layout_margin="@dimen/dimen_6dp"
            android:textStyle="normal|bold"
            android:id="@+id/tvSellingRate" android:gravity="center"/>
    <TextView
            android:text="@string/fragment_exchangerate_buying_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tvSellingRate"
            android:layout_toEndOf="@+id/tvSellingRate"
            android:layout_margin="@dimen/dimen_6dp"
            android:textStyle="normal|bold"
            android:id="@+id/tvBuyingRate" android:gravity="center"/>
    <TextView
            android:text="@string/fragment_exchangerate_median_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tvBuyingRate"
            android:layout_toEndOf="@+id/tvBuyingRate"
            android:layout_margin="@dimen/dimen_6dp"
            android:textStyle="normal|bold"
            android:id="@+id/tvMedianRate" android:gravity="center"/>
</RelativeLayout>